удосконалив контейнер "insaid_earn" & "insaid_cost"

--- a/earn-cost.html
+++ b/earn-cost.html
@@ -60,7 +60,7 @@
                 </div>
                 <div class="circle">
                     <h2 id="cost_money" style="margin-top: 65px; color: #ce381a">0 ₴</h2>
-                    <h1 id="sum_money" style="padding: 30px 0px;color: #cbb138">2394578 ₴</h1>
+                    <h1 id="sum_money" style="padding: 30px 0px;color: #cbb138">0 ₴</h1>
                     <h2 id="earn_money" style="color: #35981a">0 ₴</h2>
                 </div>
                 <div>
@@ -101,26 +101,13 @@
             </div>
             <div id="all_category" style="display: flex; justify-content: center;">
                 <div id="earn_category_line">
-                    <div id="insaid_earn" style="display: flex; justify-content: center; flex-direction: row;">
-                        <div class="category">
-                            <h3 id="name_category">Категорія</h3>
-                            <img id="img" src="image/ChatGPT Image May 31, 2025, 08_09_41 PM.png" width="70px" height="70px">
-                            <h2 id="money" style="color: #05930e;">+1600</h2>
-                        </div>
+                    <div id="insaid_earn" style="display: flex; justify-content: center; flex-direction: row; flex-wrap: wrap;">
+
                     </div>
                 </div>
                 <div id="cost_category_line">
-                    <div id="insaid_cost" style="display: flex; justify-content: center; flex-direction: row;">
-                        <div class="category">
-                            <h3>Категорія</h3>
-                            <img src="image/ChatGPT Image May 31, 2025, 08_09_41 PM.png" width="70px" height="70px">
-                            <h2 style="color: #05930e;">+1600</h2>
-                        </div>
-                        <div class="category">
-                            <h3>Категорія</h3>
-                            <img src="image/ChatGPT Image May 31, 2025, 08_09_41 PM.png" width="70px" height="70px">
-                            <h2 style="color: #05930e;">+1600</h2>
-                        </div>
+                    <div id="insaid_cost" style="display: flex; justify-content: center; flex-direction: row; flex-wrap: wrap;">
+
                     </div>
                 </div>
             </div>
