--- a/earn-cost.html
+++ b/earn-cost.html
@@ -53,16 +53,33 @@
                                 </div>
                             </div>
                             <div style="padding: 10px">
-                                <h2 style="color: #cbb138">Добийся своєї цілі</h2>
+                                <h2 style="color: #cbb138">Досягни своєї мети</h2>
                                 <h2 style="color: #cbb138">як найшвилше!</h2>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="circle">
-                    <h2 id="cost_money" style="margin-top: 65px; color: #ce381a">0 ₴</h2>
-                    <h1 id="sum_money" style="padding: 30px 0px;color: #cbb138">0 ₴</h1>
-                    <h2 id="earn_money" style="color: #35981a">0 ₴</h2>
+                <div style="display: flex; flex-direction: column; align-items: center; justify-content: space-between;">
+                    <div class="circle">
+                        <h2 id="cost_money" style="margin-top: 65px; color: #ce381a">0 ₴</h2>
+                        <h1 id="sum_money" style="padding: 30px 0px;color: #cbb138">0 ₴</h1>
+                        <h2 id="earn_money" style="color: #35981a">0 ₴</h2>
+                    </div>
+                    <div style="display: flex; border-radius: 20px; text-align: center; margin-right: 450px; margin-top: -80px; justify-content: space-around;">
+                        <div id="symbol" class="box" style="position: absolute; width: 70px; height: 70px; margin-top: -80px;">
+                            <div> 
+                                <h1 style="color: #ffd722">₴</h1>
+                            </div>
+                        </div>
+                        <div id="symbol_2" class="box" style="display: flex; flex-direction: row;
+                                                              position: absolute; margin-left: 520px; height: 70px; 
+                                                              margin-top: -80px; width: 400px;">
+                            <button style="padding: 15px 25px; margin: 5px"><h2>$</h2></button>
+                            <button style="padding: 15px 25px; margin: 5px"><h2>€</h2></button>
+                            <button style="padding: 15px 25px; margin: 5px"><h2>¥</h2></button>
+                        </div>
+
+                    </div>
                 </div>
                 <div>
                     <div class="box" style="display: flex; justify-content: space-evenly;">
@@ -144,7 +161,7 @@
               <div style="margin-left: 30px">
                 <h3>Розробники сайту</h3>
                 <h4 style="margin: 10px">Haliullin Nikita Radislavovich</h4>
-                <h4 style="margin: 10px">lukyanov Mark Radislavovich</h4>
+                <h4 style="margin: 10px">Lukianov Mark Pavlovich</h4>
               </div>
 
               <div>
