додав кнопку очищення

--- a/earn-cost.html
+++ b/earn-cost.html
@@ -66,14 +66,14 @@
                         <h2 id="earn_money" style="color: #35981a">0 ₴</h2>
                     </div>
                     <div style="display: flex; border-radius: 20px; margin-bottom: 40px; margin-right: 450px; justify-content: space-around;">
-                        <div id="symbol" class="box" style="position: absolute; width: 70px; height: 70px; margin-top: -80px; text-align: center;">
+                        <div id="symbol" class="box" style="position: absolute; width: 70px; height: 70px; margin-top: -120px; text-align: center;">
                             <div> 
                                 <h1 style="color: #ffd722">₴</h1>
                             </div>
                         </div>
                         <div id="symbol_2" class="box" style="display: flex; flex-direction: row;
                                                               position: absolute; margin-left: 520px; height: 70px; 
-                                                              margin-top: -80px; width: 400px;">
+                                                              margin-top: -120px; width: 400px;">
                             <button id="currency_1" style="padding: 15px 25px; margin: 5px"><h2>$</h2></button>
                             <button id="currency_2" style="padding: 15px 25px; margin: 5px"><h2>₴</h2></button>
                             <button id="currency_3" style="padding: 15px 25px; margin: 5px"><h2>€</h2></button>
@@ -116,6 +116,9 @@
                                 </div>
                             </div>
                         </div>  
+                        <div id="clear" class="delete" style = 'width: 260px; height: 40px'>
+                            Очистити
+                        </div>
                     </div>
                 </div>
             </div>
