--- a/1_main.html
+++ b/1_main.html
@@ -1,7 +1,6 @@
 <html>
     <head>
         <title>SmartBalance</title>
-        <link rel="stylesheet" href="global.css">
         <link rel="stylesheet" href="styles.css">
     </head> 
     <body style= "background-color: black;">
@@ -19,8 +18,8 @@
                 <ul>
                     <li><a href="#">Головна</a></li>
                     <li><a href="earn-cost.html">Заробіток\витрати &blacktriangledown;</a></li>
-                    <li><a href="#">створення-категорії</a></li>
-                    <li><a href="#">Войти</a></li>
+                    <li><a href="authorization.html">Увійти</a></li>
+                   <!-- <li><img style="position: absolute; margin-top: -15px;" src="image/noname.png" width="60px" height="60px"></li> -->
                 </ul>
             </nav>
         </header>
@@ -35,7 +34,7 @@
                         <h1 style="color: #FF5B00">Записуй. Аналізуй. Заощаджуй.</h1>
                     </div>
                     <div>
-                        <button id="to-go" style="cursor: pointer;">Перейти</button>
+                        <a href="earn-cost.html"><button id="to-go" style="cursor: pointer;">Перейти</button></a>
                         <h6 style="color: gray; padding: 5px">^ натисни щоб почати керувати грошима</h6>
                     </div>
                 </div>
@@ -78,7 +77,7 @@
                 </div>
             </div>
         </main>
-        <footer style="background: #222; color: white; padding: 30px 0;">
+        <footer style="background: #292929; color: white; padding: 30px 0;">
             <div style="margin-bottom: 10px; text-align: center;">
               <strong>SmartBalance</strong> © 2025
             </div>
@@ -92,7 +91,7 @@
               <div>
                 <h3>Контакти</h3>
                 <p>Телефон 1: <a href="tel:+380123456789" style="color: #4CAF50;">+38 (068) 361-05-10</a></p>
-                <p>Телефон 2: <a href="tel:+380123456789" style="color: #4CAF50;">+38 (068) 361-05-10</a></p>
+                <p>Телефон 2: <a href="tel:+380123456789" style="color: #4CAF50;">+1 312 320 5830</a></p>
                 <p>Email 1: <a href="mailto:info@example.com" style="color: #4CAF50;">nikitahaliullin10@gmail.com</a></p>
                 <p>Email 2: <a href="mailto:info@example.com" style="color: #4CAF50;">nikitahaliullin10@gmail.com</a></p>
                 <p>Адреса: вул. Центральна, 10, Київ</p>
@@ -109,7 +108,7 @@
               <div style="margin-left: 30px">
                 <h3>Розробники сайту</h3>
                 <h4 style="margin: 10px">Haliullin Nikita Radislavovich</h4>
-                <h4 style="margin: 10px">lukyanov Mark Radislavovich</h4>
+                <h4 style="margin: 10px">Lukianov Mark Pavlovich</h4>
               </div>
 
               <div>
