Фінальна версія проекту

--- a/authorization.html
+++ b/authorization.html
@@ -5,16 +5,15 @@
     </head>
     <body>
         <header>
-            <a href="#" class="logo"><img width="50px" height="50px" src="image/photo_2025-05-31_21-30-19.jpg"></a>
+            <a href="1_main.html" class="logo"><img width="50px" height="50px" src="image/photo_2025-05-31_21-30-19.jpg"></a>
             <nav>
                 <ul>
                     <li><a href="1_main.html">Головна</a></li>
-                    <li><a href="#">Зарегеструватись</a></li>
+                    <li id="registration"><a href="1_regitration.html">Зарегеструватись</a></li>
+                    <li id="quit"><a href="#">Вийти</a></li>
                 </ul>
             </nav>
         </header>
-        
-        <button id="quit">Вийти</button>
         
         <main style="display: flex; margin-top: 120px; justify-content: center;">
             <div style="display: flex; justify-content: space-between;">
@@ -64,7 +63,7 @@
               <div>
                 <h3>Контакти</h3>
                 <p>Телефон 1: <a href="tel:+380123456789" style="color: #4CAF50;">+38 (068) 361-05-10</a></p>
-                <p>Телефон 2: <a href="tel:+380123456789" style="color: #4CAF50;">+38 (068) 361-05-10</a></p>
+                <p>Телефон 2: <a href="tel:+380123456789" style="color: #4CAF50;">+1 312 320 5830</a></p>
                 <p>Email 1: <a href="mailto:info@example.com" style="color: #4CAF50;">nikitahaliullin10@gmail.com</a></p>
                 <p>Email 2: <a href="mailto:info@example.com" style="color: #4CAF50;">nikitahaliullin10@gmail.com</a></p>
                 <p>Адреса: вул. Центральна, 10, Київ</p>
