--- a/earn-cost.html
+++ b/earn-cost.html
@@ -6,13 +6,12 @@
     </head>
     <body>
         <header>
-            <a href="#" class="logo"><img width="50px" height="50px" src="image/photo_2025-05-31_21-30-19.jpg"></a>
+            <a href="1_main.html" class="logo"><img width="50px" height="50px" src="image/photo_2025-05-31_21-30-19.jpg"></a>
             <nav>
                 <ul>
                     <li><a href="1_main.html">Головна</a></li>
                     <li><a href="earn-cost.html">Заробіток\витрати &blacktriangledown;</a></li>
-                    <li><a href="#">створення-категорії</a></li>
-                    <li><a href="#">Войти</a></li>
+                    <li><a href="authorization.html">Увійти</a></li>
                 </ul>
             </nav>
         </header>
@@ -88,7 +87,7 @@
                             <button style="padding: 0px 35px; font-size: 40px;">←</button>
                         </div>
                         <div>
-                            <button style="padding: 0px 35px; font-size: 40px;">→</button>
+                            <button id="left_button" style="padding: 0px 35px; font-size: 40px;">→</button>
                         </div>
                     </div>
                     <div>
@@ -98,16 +97,15 @@
                             <h2 style="color: #632706; text-align: center;">Створення категорій</h2>
                             <div style="display: block; flex-direction: column; padding: 20px;">
                                 <div style="display: block;">
-                                    <label for="category_name">Категорія*</label>
+                                    <label style="color: white" for="category_name">Категорія*</label>
                                     <div style="padding-top: 10px;">
                                         <input style="margin-bottom: 20px; font-size: 20px; border-radius: 10px; color: black" type="text" id="name" required>
                                     </div>
                                 </div>
                                 <div style="display: block;">
-                                    <label for="category_sum">Сумма*</label>
+                                    <label style="color: white" for="category_sum">Сумма*</label>
                                     <div style="padding-top: 10px;">
-                                        <input style="font-size: 20px; border-radius: 10px; color: black" type="number" id="sum" required>
-                                        <h5 style="margin-bottom: 20px;">^гроші пиши в гривнях</h5>
+                                        <input style="font-size: 20px; margin-bottom: 20px; border-radius: 10px; color: black" type="number" id="sum" required>
                                     </div>
                                 </div>
                                 <div style="display: flex; justify-content: space-around;">
@@ -149,7 +147,7 @@
               <div>
                 <h3>Контакти</h3>
                 <p>Телефон 1: <a href="tel:+380123456789" style="color: #4CAF50;">+38 (068) 361-05-10</a></p>
-                <p>Телефон 2: <a href="tel:+380123456789" style="color: #4CAF50;">+38 (068) 361-05-10</a></p>
+                <p>Телефон 2: <a href="tel:+380123456789" style="color: #4CAF50;">+1 312 320 5830</a></p>
                 <p>Email 1: <a href="mailto:info@example.com" style="color: #4CAF50;">nikitahaliullin10@gmail.com</a></p>
                 <p>Email 2: <a href="mailto:info@example.com" style="color: #4CAF50;">nikitahaliullin10@gmail.com</a></p>
                 <p>Адреса: вул. Центральна, 10, Київ</p>
@@ -179,6 +177,6 @@
               </div>
             </div>
         </footer>
-        <script src="js.js"></script>
+        <script src="main.js"></script>
     </body>
 </html>
