--- a/1_regitration.html
+++ b/1_regitration.html
@@ -102,7 +102,8 @@
               </div>
             </div>
         </footer>
-        <script src="m_refistration.js"></script>
+        <script src="m_registration.js"></script>
     </body>
 </html>
+
 
