--- a/earn-cost.html
+++ b/earn-cost.html
@@ -20,7 +20,7 @@
             <a href="1_main.html" class="logo"><img width="50px" height="50px" src="image/photo_2025-05-31_21-30-19.jpg"></a>
             <nav>
                 <ul>
-                    <li><a href="1_main.html">Головна</a></li>
+                    <li><a href="index.html">Головна</a></li>
                     <li><a href="earn-cost.html">Заробіток\витрати &blacktriangledown;</a></li>
                     <li><a href="authorization.html">Увійти</a></li>
                 </ul>
