--- a/authorization.html
+++ b/authorization.html
@@ -18,7 +18,7 @@
             <a href="1_main.html" class="logo"><img width="50px" height="50px" src="image/photo_2025-05-31_21-30-19.jpg"></a>
             <nav>
                 <ul>
-                    <li><a href="1_main.html">Головна</a></li>
+                    <li><a href="index.html">Головна</a></li>
                     <li id="registration"><a href="1_regitration.html">Зарегеструватись</a></li>
                     <li id="quit"><a href="#">Вийти</a></li>
                 </ul>
@@ -106,4 +106,5 @@
         <script src="m_authorization.js"></script>
     </body>
 </html>
+
 
