--- a/1_regitration.html
+++ b/1_regitration.html
@@ -18,7 +18,7 @@
             <a href="1_main.html" class="logo"><img width="50px" height="50px" src="image/photo_2025-05-31_21-30-19.jpg"></a>
             <nav>
                 <ul>
-                    <li><a href="1_main.html">Головна</a></li>
+                    <li><a href="index.html">Головна</a></li>
                     <li><a href="authorization.html">Увійти</a></li>
                 </ul>
             </nav>
@@ -105,5 +105,6 @@
         <script src="m_registration.js"></script>
     </body>
 </html>
+
 
 
