--- a/earn-cost.html
+++ b/earn-cost.html
@@ -188,6 +188,6 @@
               </div>
             </div>
         </footer>
-        <script src="js.js"></script>
+        <script src="main.js"></script>
     </body>
 </html>
